# merge-whisper-subtitles

./: .gitignore  .pre-commit-config.yaml  README.md  merge_whisper_subtitles.py  pyproject.toml  tox.ini
testing/: expected.srt  input.words.srt
tests/: merge_whisper_subtitles_test.py
