[project]
name = "merge-whisper-subtitles"
version = "0.0.0"
description = "Merge words from whisper-timestamped into easy-to-read subtitles."
requires-python = "=>3.9.*"

[tool.isort]
add_imports = [
    "from __future__ import annotations",
]
force_single_line = true
profile = "black"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 1
